<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/whiteBackActionBar">

    <ImageView
        android:id="@+id/todoInfoIcon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_margin="20dp"
        android:contentDescription="@string/toDo"/>

    <TextView
        android:id="@+id/todoInfoTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/toDo"
        style="@style/fontTitleSmall"
        app:layout_constraintLeft_toRightOf="@id/todoInfoIcon"
        android:layout_margin="40dp"/>

    <TextView
        android:id="@+id/todoInfoDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/todoInfoIcon"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/information"
        style="@style/fontDescription"
        android:layout_margin="20dp"/>

    <TextView
        android:id="@+id/todoInfoDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/todoInfoDescription"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_margin="40dp"
        android:text="@string/_123456"
        style="@style/fontDescription"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/todoInfoCloseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/todoInfoDate"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/close"
        android:textAllCaps="false"
        style="@style/fontTitleSmall"
        android:textColor="@color/whiteBackActionBar"
        android:background="@drawable/alert_dialog_button"
        android:backgroundTint="@color/halo_blueText"
        android:layout_margin="40dp"
        />









</androidx.constraintlayout.widget.ConstraintLayout>