<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.user.info.UserInfoActivity">

    <ImageView
        android:id="@+id/background_user_info"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintBottom_toTopOf="@id/userInfo_shape"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:contentDescription="@string/app_name"
        android:background="@color/halo_blueText"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="270dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="@color/halo_blue_background"
        />


    <TextView
        android:id="@+id/settingsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        style="@style/fontTitleSmall"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="20dp"/>

    <ImageView
        android:id="@+id/backButton"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:src="@drawable/ic_baseline_keyboard_backspace_24"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:contentDescription="@string/app_name"
        android:padding="15dp"
        android:layout_marginTop="3dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/userInfo_shape"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="230dp"
        android:background="@color/whiteBackActionBar">

        <TextView
            android:id="@+id/userInfo_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Dastan Sharshekeev"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/fontTitleSmall"
            android:layout_marginEnd="60dp"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:id="@+id/userInfoRole"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/marketing"
            app:layout_constraintLeft_toLeftOf="@id/userInfo_name"
            app:layout_constraintTop_toBottomOf="@id/userInfo_name"
            style="@style/fontDescription"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:id="@+id/userInfoInformationTV"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/profile_settings"
            app:layout_constraintTop_toBottomOf="@id/userInfoRole"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="30dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:gravity="center_vertical"
            style="@style/fontTitleSmall"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#99000000"
            app:layout_constraintTop_toBottomOf="@id/userInfoInformationTV"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/userInfoMySalaryTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_salary"
            app:layout_constraintTop_toBottomOf="@id/userInfoInformationTV"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="27dp"
            style="@style/fontDescription"
            android:layout_marginStart="20dp"
            />

        <TextView
            android:id="@+id/mySalaryNumTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_salary"
            app:layout_constraintTop_toBottomOf="@id/userInfoInformationTV"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginEnd="20dp"
            style="@style/fontDescription"
            android:layout_marginTop="27dp"
            />

        <TextView
            android:id="@+id/switch_theme_userInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/userInfoMySalaryTV"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="27dp"
            android:text="@string/switch_theme"
            style="@style/fontDescription"/>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/theme_switch_user_info"
            android:layout_width="80dp"
            android:layout_height="10dp"
            app:layout_constraintTop_toBottomOf="@id/mySalaryNumTv"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop = "20dp"
            android:layout_marginEnd="20dp"
            android:checked="true"
            app:track="@drawable/toggle_button_background_themed"
            app:useMaterialThemeColors="false"
            android:thumb="@drawable/toggle"
            />

        <TextView
            android:id="@+id/changePassword"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:text="@string/change_password"
            app:layout_constraintTop_toBottomOf="@id/theme_switch_user_info"
            app:layout_constraintLeft_toLeftOf="parent"
            style="@style/fontDescription"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="center_vertical"
            app:drawableEndCompat="@drawable/ic_baseline_keyboard_arrow_right_24" />


        <RadioGroup
            android:id="@+id/radio_button_group"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:orientation="horizontal"
            android:padding="5dp"
            android:layout_margin="50dp"
            app:useMaterialThemeColors="false"
            >

            <RadioButton
                android:id="@+id/radio_button_en"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/en"
                android:button="@android:color/transparent"
                android:fontFamily="@font/montserrat_bold"
                android:background="@drawable/radio_selector"
                android:elevation="4dp"
                android:textColor="@color/halo_blueText"
                android:textSize="14sp"
                android:gravity="center"
                android:layout_margin="3dp"
                />

            <RadioButton
                android:id="@+id/radio_button_ru"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ru"
                android:button="@android:color/transparent"
                android:background="@drawable/radio_selector"
                android:textColor="@color/halo_blueText"
                android:elevation="4dp"
                android:fontFamily="@font/montserrat_bold"
                android:textSize="14sp"
                android:gravity="center"
                android:layout_margin="3dp"/>

            <RadioButton
                android:id="@+id/radio_button_ky"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ky"
                android:button="@android:color/transparent"
                android:background="@drawable/radio_selector"
                android:textColor="@color/halo_blueText"
                android:elevation="4dp"
                android:fontFamily="@font/montserrat_bold"
                android:textSize="14sp"
                android:gravity="center"
                android:layout_margin="3dp"/>

        </RadioGroup>

        <TextView
            android:id="@+id/changeLanguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_language"
            app:layout_constraintBottom_toTopOf="@id/radio_button_group"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginBottom="20dp"
            style="@style/fontTitleSmall"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/account_drawble_user_info"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="210dp"
        android:background="@drawable/circle_white"
        android:layout_marginStart="40dp"
        android:contentDescription="@string/app_name"
        />



</androidx.constraintlayout.widget.ConstraintLayout>