<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/whiteBackActionBar"
    >

    <ImageView
        android:id="@+id/logo_toolbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_app_icon_50x44"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/logout"/>

    <ImageView
        android:id="@+id/logout_toolbar"
        android:layout_width="60dp"
        android:layout_height="55dp"
        android:src="@drawable/ic_logout"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="12dp"
        android:contentDescription="@string/logout"
        />
    <TextView
        android:id="@+id/title_toolbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/logo_toolbar"
        style="@style/fontTitleForToolBar"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"/>
    <TextView
        android:id="@+id/accType_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/fontDescription"
        android:text="@string/marketing"
        app:layout_constraintTop_toBottomOf="@id/title_toolbar"
        app:layout_constraintLeft_toRightOf="@id/logo_toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textColor="@color/halo_blueText"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="8dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>