<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="40dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/container_alert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/fragment_marketing"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/logout_icon_alert"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="@string/social_media"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            />

        <TextView
            style="@style/fontTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/logout" />

        <TextView
            style="@style/fontDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:text="@string/alert_logout_description"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:padding="22dp"
            android:rowCount="2"
            android:weightSum="100">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/cancel_button_alert"
                style="@style/fontTitleSmall"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginEnd="20dp"
                android:layout_weight="50"
                android:background="@drawable/alert_dialog_button"
                android:elevation="0dp"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/halo_blueText" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/yes_button"
                style="@style/fontTitleSmall"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="20dp"
                android:layout_weight="50"
                android:background="@drawable/alert_dialog_button"
                android:backgroundTint="@color/halo_blueText"
                android:elevation="0dp"
                android:text="@string/logout"
                android:textAllCaps="false"
                android:textColor="@color/whiteBackActionBar" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>